# SU2-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PBS  README.md  STDIN.e142816  STDIN.o142816  availableU.txt  availbleU.txt  command.txt  exfile  param.sdpa  search_four_square.cpp  tmp.cpp
benchmark/: Prob_Unitary_Synthesis  Prob_Unitary_Synthesis.cpp  bench.cpp  deterministic  deterministic.cpp  probabilistic  probabilistic.cpp
include/: Clifford_T_1Q.hpp  ExactSynthesis.hpp  SU2_Compiler.hpp  U2_ZOmega.hpp  enum_integer_points.hpp  eps_net_verification.hpp  rings.hpp  sdpa_dd.hpp  su2.hpp  type.hpp
include/clifford_t/: deterministic.hpp  deterministic_synth.hpp  exact_synth.hpp  exact_synthesis.hpp  exact_synthesize.hpp  probabilistic.hpp  synthesize.hpp
include/core/: mix_su2.hpp  su2.hpp  type.hpp
include/math/: all.hpp  constants.hpp  functions.hpp  lattice.hpp  linalg.hpp  number_theory.hpp  sdp.hpp
include/probabilistic_tools/: mixing_su2.hpp  sdp.hpp
include/ring/: Zroot2.hpp  Zzeta8.hpp  Zzeta8j.hpp  all.hpp
include/util/: time_profiler.hpp
plot/: dete_time.py  plot.py  plot_prob.py  prob_time.py  t_count.py
src/: CMakeLists.txt  ExactSynthesis.cpp  ExactSynthesis.hpp  HashTable.hpp  Prob_Synthesis.cpp  Prob_Synthesis.hpp  Prob_synthesis.cpp  SU2_compiler.cpp  SU2_compiler_MPI.cpp  U2_ZOmega.cpp  U2_ZOmega.hpp  Unimodular_Z.hpp  Unimodular_Zsqrt2.hpp  enum_integer_points.cpp  enum_integer_points.hpp  enum_u_t.cpp  enum_u_t.hpp  eps_net_verification.cpp  exact_synthesis.cpp  grid_operator.hpp  grid_solver.cpp  grid_solver.hpp  linalg.cpp  linalg.hpp  quaternion.cpp  quaternion.hpp  rings.cpp  rings.hpp  sdpa_dd.hpp  su2.cpp  type.hpp
src/CPU/: Clifford.txt  Prob_synthesis.cpp  Rings.cpp  SU2-compiler-bench.e198515  SU2-compiler-bench.e198516  SU2-compiler-bench.e198763  SU2-compiler-bench.e198822  SU2-compiler-bench.o198516  SU2-compiler-test.e198780  SU2-compiler-test.o198780  bench.cpp  enumerate_u_t.cpp  eps_net_verification.cpp  exact_decomp.cpp  exact_synthesis.cpp  example.cpp  grid_solve.cpp  linalg.hpp  log.txt  log1-7.txt  log2.txt  log_sqrt(0.1)1e-10.txt  quaternion.cpp  quaternion.hpp  sdpa_dd.hpp  search_four_square.cpp  solve_u_t.cpp  utility.cpp
src/CPU_parallel/: SU2-compiler-bench.e198541  SU2-compiler-bench.e198542  SU2-compiler-bench.e198759  SU2-compiler-test.e198532  SU2-compiler-test.e198535  SU2-compiler-test.e198761  SU2-compiler-test.e198762  SU2-compiler-test.o198532  bench.cpp  example.cpp  log2.txt  search_four_square.cpp  solve_u_t.cpp
src/GPU/: Rings.cu  grid_solve.cpp  search_four_square.cu  solve_u_t.cpp
src/clifford_t/: deterministic.cpp  deterministic_synth.cpp  exact_synth.cpp  exact_synthesis.cpp  exact_synthesize.cpp  probabilistic.cpp  synthesize.cpp
src/core/: mix_su2.cpp  su2.cpp
src/math/: lattice.cpp  linalg.cpp  sdp.cpp
src/plot/: plot.py
src/probabilistic_tools/: mixing_su2.cpp  sdp.cpp
src/ring/: Zroot2.cpp  Zzeta8.cpp  Zzeta8j.cpp
test/: CMakeLists.txt  enumerate.cpp  exact_synthesis.cpp  test_Prob_synthesis.cpp  test_ani.py  test_boost.cpp  test_decostruct.cpp  test_enum_integer_points.cpp  test_enumerate_u_t.cpp  test_eps_net_verification.cpp  test_quaternion.cpp  verif_2d.py
test/clifford_t/: deterministic_synth.cpp  exact_synth.cpp  test_deterministic.cpp  test_exact_synthesize.cpp  test_probabilistic.cpp
test/core/: mix_su2.cpp  su2.cpp
test/math/: lattice.cpp  linalg.cpp  number_theory.cpp  sdp.cpp
test/probabilistic_tools/: test_mixing_su2.cpp  test_sdp.cpp
test/ring/: Zroot2.cpp  Zzeta8.cpp  Zzeta8j.cpp  test_Zroot2.cpp  test_Zzeta8.cpp  test_Zzeta8j.cpp
tests/: Prob_Synthesis  Prob_Synthesis.cpp  SU2_compiler  SU2_compiler.cpp  SU2_compiler_MPI  SU2_compiler_MPI.cpp  Unimodular  Unimodular.cpp  Unimodular_Z  Unimodular_Z.cpp  bencmark_hash.cpp  enum_u_t  enum_u_t.cpp  exact_synthesis.cpp  gpu_test.cu  grid_operator.cpp  quaternion.cpp  test_Prob_synthesis.cpp  test_Unimodular  test_boost.cpp  test_check_inter_2ball.cpp  test_enum_integer_points.cpp  test_enumerate_u_t.cpp  test_linalg.cpp  test_make.cpp  test_parallel_sort.cpp  test_quaternion.cpp  test_sdpa.cpp  verif_2d.py
tests/clifford_t/: synthesize.cpp  test_exact_synthesis.cpp  test_exact_synthesize.cpp
tests/ring/: test_Zroot2.cpp  test_Zzeta8.cpp  test_Zzeta8j.cpp
tmp/: SU2_compiler.cpp  test_Clifford_T_1Q.cpp  test_approximation_synthesis_CliffordT.cpp  test_eps_net_verification.cpp
tmp2/: Clifford_T_1Q.cpp  Prob_Synthesis.cpp  Prob_Synthesis.hpp  SU2_Compiler.cpp  SU2_compiler.cpp  SU2_compiler.hpp  U2_ZOmega.cpp  Unimodular_Z.hpp  Unimodular_Zsqrt2.hpp  eps_net_verification.cpp  grid_solver.cpp  grid_solver.hpp  linalg.hpp  quaternion.cpp  rings.cpp
